packages/native/include/opentui.h


#define OT_CONTEXT_ABI_VERSION UINT32_C(1)
typedef int32_t ot_status;
#define OT_OK INT32_C(0)
#define OT_INVALID_ARGUMENT (-INT32_C(1))
#define OT_CONTEXT_BUSY (-INT32_C(6))
#define OT_WRONG_CONTEXT (-INT32_C(7))
#define OT_STALE_HANDLE (-INT32_C(9))
#define OT_WRONG_SESSION (-INT32_C(10))
#define OT_OUTPUT_BACKPRESSURE (-INT32_C(11))
#define OT_OUTPUT_BUSY (-INT32_C(13))
#define OT_STALE_OUTPUT (-INT32_C(14))
#define OT_OUTPUT_FAILED (-INT32_C(15))
#define OT_OBJECT_LIMIT (-INT32_C(16))
typedef struct ot_context ot_context;
typedef struct ot_handle {
    uint64_t context_id;
    uint32_t slot;
    uint32_t generation;
} ot_handle;
#define OT_SCENE_ROOT UINT32_C(0)
#define OT_SCENE_BOX UINT32_C(1)
#define OT_SCENE_TEXT UINT32_C(2)
#define OT_SCENE_TEXT_FOREGROUND UINT32_C(1)
#define OT_SCENE_TEXT_LINK UINT32_C(4)
typedef struct ot_scene_linked_text_chunk {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t byte_count;
    uint32_t flags;
    uint16_t foreground[4];
    uint16_t background[4];
    uint32_t attributes;
    uint32_t reserved;
    uint32_t link_offset;
    uint32_t link_byte_count;
} ot_scene_linked_text_chunk;
typedef struct ot_scene_paint_options {
    uint32_t struct_size;
    uint32_t abi_version;
    int32_t z_index;
    float opacity;
    double translate_x;
    double translate_y;
    uint32_t border_sides;
    uint32_t should_fill;
    uint16_t background[4];
    uint16_t border_color[4];
    uint32_t border_style;
    uint32_t focusable;
    uint16_t focused_border_color[4];
    uint32_t reserved;
} ot_scene_paint_options;
ot_status ot_scene_create_node(ot_context *, const ot_handle *session, uint32_t kind,
    uint32_t num, ot_handle *out_node);
ot_status ot_scene_destroy_node(ot_context *, const ot_handle *node);
ot_status ot_scene_move_node(ot_context *, const ot_handle *node, const ot_handle *parent, uint32_t index);
ot_status ot_scene_set_style(ot_context *, const ot_handle *node, uint32_t group,
    uint32_t kind, uint32_t edge, uint32_t unit, float value, uint32_t flags);
ot_status ot_scene_set_paint(ot_context *, const ot_handle *node, const ot_scene_paint_options *);
ot_status ot_scene_set_text(ot_context *, const ot_handle *node, const uint8_t *bytes, uint32_t byte_count);
ot_status ot_scene_set_styled_text_with_links(ot_context *, const ot_handle *node,
    const uint8_t *bytes, uint32_t byte_count, const ot_scene_linked_text_chunk *chunks, uint32_t chunk_count,
    const uint8_t *urls, uint32_t url_byte_count);
ot_status ot_scene_get_text(ot_context *, const ot_handle *node, uint8_t *bytes, uint32_t capacity, uint32_t *out_count);
ot_status ot_scene_paint(ot_context *, const ot_handle *session, const uint16_t background[4], uint32_t use_mouse, uint32_t excluded_hit_num);
ot_status ot_scene_hit_test(ot_context *, const ot_handle *session, int32_t x, int32_t y, uint32_t *out_num);
typedef struct ot_session_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t chunk_size;
    uint32_t span_capacity;
    uint64_t max_bytes;
    uint32_t control_capacity;
    uint32_t reserved;
} ot_session_options;
typedef struct ot_output_ticket {
    ot_handle session;
    uint64_t request_id;
    uint32_t byte_count;
    uint32_t reserved;
} ot_output_ticket;
#define OT_SESSION_CLOSED_STATE UINT32_C(2)
#define OT_SESSION_FAILED UINT32_C(3)
#define OT_SESSION_CANCELLED_STATE UINT32_C(4)
#define OT_SESSION_REMOTE_AUTO UINT32_C(0)
#define OT_SESSION_REMOTE_LOCAL UINT32_C(1)
#define OT_SESSION_REMOTE_REMOTE UINT32_C(2)
#define OT_SESSION_ENV_ENTRIES_MAX UINT32_C(256)
#define OT_SESSION_ENV_BYTES_MAX UINT32_C(65536)
typedef struct ot_session_renderer_env_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t width;
    uint32_t height;
    uint32_t remote_mode;
    uint32_t entry_count;
    uint32_t byte_count;
    uint32_t reserved;
} ot_session_renderer_env_options;
#define OT_RENDER_PRESENTED UINT32_C(0)
#define OT_RENDER_PENDING UINT32_C(1)
#define OT_RENDER_SKIPPED UINT32_C(2)
#define OT_RENDER_FAILED UINT32_C(3)
typedef struct ot_session_renderer_state {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t width;
    uint32_t height;
    uint64_t frame_count;
    uint32_t frame_pending;
    uint32_t reserved;
} ot_session_renderer_state;
#define OT_SESSION_CONTROL_PACKET_BYTES UINT32_C(4096)
#define OT_TERMINAL_ALTERNATE_SCREEN UINT32_C(1)
typedef struct ot_session_terminal_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t flags;
    uint32_t kitty_keyboard_flags;
} ot_session_terminal_options;
#define OT_TERMINAL_ACTIVE UINT32_C(2)
#define OT_TERMINAL_RESTORED UINT32_C(7)
#define OT_PUMP_IDLE UINT32_C(0)
#define OT_PUMP_AGAIN UINT32_C(1)
#define OT_PUMP_OUTPUT_PENDING UINT32_C(2)
#define OT_PUMP_WAIT_UNTIL UINT32_C(3)
#define OT_PUMP_CLOSED UINT32_C(4)
typedef struct ot_session_pump_result {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t status;
    uint32_t reserved;
    uint64_t deadline_ns;
} ot_session_pump_result;
typedef struct ot_context_options {
    uint32_t struct_size;
    uint32_t abi_version;
    uint32_t flags;
    uint32_t object_capacity;
    uint32_t render_cells_max;
    uint32_t reserved[3];
} ot_context_options;
typedef struct ot_context_error {
    uint32_t struct_size;
    uint32_t abi_version;
    ot_status status;
    uint32_t reserved;
} ot_context_error;
uint32_t ot_context_abi_version(void);
ot_status ot_context_create(const ot_context_options *options, ot_context **out_context);
ot_status ot_context_destroy(ot_context *context);
ot_status ot_context_get_last_error(ot_context *context, ot_context_error *out_error);
ot_status ot_session_create(
    ot_context *context,
    const ot_session_options *options,
    ot_handle *out_session);
ot_status ot_session_attach_renderer_with_env(
    ot_context *context,
    const ot_handle *session,
    const ot_session_renderer_env_options *options,
    const uint8_t *environment);
ot_status ot_session_render(
    ot_context *context,
    const ot_handle *session,
    uint32_t force,
    uint32_t *out_result);
ot_status ot_session_resize_renderer(
    ot_context *context,
    const ot_handle *session,
    uint32_t width,
    uint32_t height);
ot_status ot_session_get_renderer_state(
    ot_context *context,
    const ot_handle *session,
    ot_session_renderer_state *out_state);
ot_status ot_session_setup_terminal(
    ot_context *context,
    const ot_handle *session,
    const ot_session_terminal_options *options);
ot_status ot_session_get_terminal_state(ot_context *context, const ot_handle *session, uint32_t *out_phase);
ot_status ot_session_pump(
    ot_context *context,
    const ot_handle *session,
    uint64_t now_ns,
    uint32_t work_budget,
    ot_session_pump_result *out_result);
ot_status ot_session_write(
    ot_context *context,
    const ot_handle *session,
    const uint8_t *bytes,
    uint32_t byte_count);
ot_status ot_session_read_output(
    ot_context *context,
    const ot_handle *session,
    uint8_t *bytes,
    uint32_t capacity,
    ot_output_ticket *out_ticket);
ot_status ot_session_complete_output(
    ot_context *context,
    const ot_handle *session,
    const ot_output_ticket *ticket,
    uint32_t success);
ot_status ot_session_close(ot_context *context, const ot_handle *session);
ot_status ot_session_cancel(ot_context *context, const ot_handle *session);
ot_status ot_session_get_state(ot_context *context, const ot_handle *session, uint32_t *out_state);
ot_status ot_session_destroy(ot_context *context, const ot_handle *session);